src/test/ui/consts/const-eval/promoted_const_fn_fail.nll.stderr
error[E0716]: temporary value dropped while borrowed
  --> $DIR/promoted_const_fn_fail.rs:30:27
   |
LL |     let x: &'static u8 = &(bar() + 1); //~ ERROR does not live long enough
   |                           ^^^^^^^^^^^ creates a temporary which is freed while still in use
...
LL | }
   | - temporary value is freed at the end of this statement
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0716`.
